Bug 634132 - Reset the current GL context after drawing thebes layers. r=joe a=blocking2.0